[package]
name = "cuptime_parser"
version = "0.1.0"
description = "Command Uptime Parser: Parses command 'uptime' to format \"x day(s) x hour(s) x minute(s)\". (library for fetrust)"
readme = "README.md"
repository = "https://github.com/mertoalex/CUptimeParser"
authors = ["Mertoalex"]
license-file = "LICENSE"
keywords = ["uptime", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
